# atlas

./: .gitignore  AGENTS.md  ROADMAP.md  atlas.db  pyproject.toml
data/samples/zerodha/: holdings-2.csv
data/uploads/: OpTransactionHistory14-07-2026.xls
scripts/: add_merchant_column.py  add_running_balance_column.py  bootstrap_accounts.py  categorize_transactions.py  debug_summary.py  dedupe_transactions.py  import_icici.py  import_zerodha.py  inspect_zerodha.py  list_transactions.py  recategorize.py  test_import.py
src/atlas/: main.py
src/atlas/api/: accounts.py  dependencies.py  router.py  routes.py
src/atlas/core/: config.py
src/atlas/database/: session.py
src/atlas/importers/: csv_importer.py  icici_importer.py  zerodha_importer.py
src/atlas/schemas/: account.py  company_score.py  financial_metrics.py  portfolio.py  scorecard.py  screener.py  screening_result.py
src/atlas/services/: account_service.py  categorization_service.py  holding_service.py  import_service.py  instrument_service.py  merchant_recognition_service.py  portfolio_service.py  screener_service.py  strategy_service.py
src/atlas/strategies/: __init__.py  base.py  quality_strategy.py  registry.py
src/atlas/ui/: app.py  (+1 more)
tests/: test_account_model.py  test_csv_importer.py  test_financial_strength.py  test_growth.py  test_icici_importer.py  test_instrument_model.py  test_instrument_service.py  test_portfolio_service.py  test_provider_factory.py  test_root.py  test_screener_service.py  test_strategy_registry.py  test_strategy_service.py  test_ui_helpers.py  test_valuation.py
(+20 files in other folders)
