[project]
name = "atlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic-settings>=2.10.0",
    "sqlmodel>=0.0.24",
    "pandas>=2.3.0",
    "xlrd>=2.0.1",
    "streamlit>=1.59.2",
    "plotly>=6.9.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
[dependency-groups]
dev = [
    "pytest>=8.4.0",
     "httpx2",
]
